--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,36 +2,38 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.harlertechnologies.azima">
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".WelcomeActivity">
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
-<!--                <action android:name="android.intent.action.VIEW" />-->
+
+                <!-- <action android:name="android.intent.action.VIEW" /> -->
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-<!--                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>-->
-                <!--<data android:scheme="http"-->
-                    <!--android:host="www.harlertechnologies.com"-->
-                    <!--android:pathPrefix="/azima"/>-->
-                <!--<data android:scheme="harlertechnologies"-->
-                    <!--android:host="azima"/>-->
-                <!--This commented lines should be in their own intent filter-->
+                <!--
+                    <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                -->
+                <!-- <data android:scheme="http" -->
+                <!-- android:host="www.harlertechnologies.com" -->
+                <!-- android:pathPrefix="/azima"/> -->
+                <!-- <data android:scheme="harlertechnologies" -->
+                <!-- android:host="azima"/> -->
+                <!-- This commented lines should be in their own intent filter -->
             </intent-filter>
         </activity>
-        <activity
-            android:name=".RegisterActivity">
-        </activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".WelcomeActivity"></activity>
     </application>
 
 </manifest>
